--- a/crd.yaml
+++ b/crd.yaml
@@ -20,3 +20,7 @@ spec:
               type: string
             role:
               type: string
+            outputPath:
+               type: string
+            outputFile:
+               type: string
