--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -32,7 +32,6 @@ jobs:
   docker-build-push:
     env:
       LATEST_TAG: type=raw,value=latest,enable={{is_default_branch}}
-      SEMVER_TAG: type=semver,pattern={{raw}}
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -53,7 +52,7 @@ jobs:
           images: quay.io/uswitch/vault-webhook
           tags: |
             type=sha,prefix=,format=long
-            ${{ (github.ref_name == 'master' || startsWith(github.ref, 'refs/tags/v')) && env.SEMVER_TAG }}
+            type=semver,pattern={{raw}}
             ${{ github.ref_name == 'master' && env.LATEST_TAG  }}
       - uses: docker/build-push-action@v5
         with:
