feat(lifecycle Sleep): Added control over Sleep.Second to only accept positive numbers

--- a/crd.yaml
+++ b/crd.yaml
@@ -59,6 +59,7 @@ spec:
                               properties:
                                 seconds:
                                   type: integer
+                                  minimum: 1
   names:
     kind: DatabaseCredentialBinding
     plural: databasecredentialbindings
