feat(lifecycle Sleep): Added control over Exec.command to have at least 1 item in the array

--- a/crd.yaml
+++ b/crd.yaml
@@ -51,6 +51,7 @@ spec:
                               properties:
                                 command:
                                   type: array
+                                  minItems: 1
                                   items:
                                     type: string
                             sleep:
